--- a/main.ipynb
+++ b/main.ipynb
@@ -69,7 +69,7 @@
     "    return dependency\n",
     "\n",
     "\n",
-    "def lll_test(sat, n, k, log=True): # n is the varible number in sat\n",
+    "def lll_test(sat, n, k, log=False): # n is the varible number in sat\n",
     "    num_clauses = len(sat)\n",
     "    # initial the alpahs for each clause (event)\n",
     "    event_prob = [2 ** (-len(clause)) for clause in sat]\n",
@@ -103,7 +103,7 @@
     "                dependency[i].append(j)\n",
     "                dependency[j].append(i)\n",
     "    \"\"\"\n",
-    "    print(f\"dependency analysis time: {time.time() - start_time:.4f}\")\n",
+    "    # print(f\"dependency analysis time: {time.time() - start_time:.4f}\")\n",
     "\n",
     "    # propagation\n",
     "    iterations = 0\n",
@@ -146,7 +146,7 @@
     "\n",
     "print('----------')\n",
     "\n",
-    "iterations, dependency = lll_test(sat_instance, n, 100, log=True)\n",
+    "iterations, dependency = lll_test(sat_instance, n, 100, log=False)\n",
     "print(f'lll_test iterations: {iterations}')\n",
     "\n",
     "print('----------')\n",
@@ -155,7 +155,7 @@
     "start_time = time.time()\n",
     "with Solver(bootstrap_with=cnf) as solver:\n",
     "    print(f'The SAT instance can be solved: {solver.solve()}')\n",
-    "    print(solver.get_model())\n",
+    "    # print(solver.get_model())\n",
     "print(f\"solver time: {time.time() - start_time:.4f}\")"
    ]
   },
@@ -173,7 +173,7 @@
     "for path in os.listdir(formulas_path):\n",
     "    sat_path = formulas_path + path\n",
     "    sat_instance, num_vars, num_clauses = read_sat(sat_path)\n",
-    "    iterations, dependency = lll_test(sat_instance, 100)\n",
+    "    iterations, dependency = lll_test(sat_instance, 100, 20)\n",
     "    if iterations > 2:\n",
     "        print('<-------->')\n",
     "        print(path)\n",
@@ -199,22 +199,137 @@
     "    unsolve_instances.append(sat_instance)\n",
     "\n",
     "\n",
+    "plot_data = []\n",
+    "\n",
     "num_all = len(unsolve_instances)\n",
     "for i in range(1, 100):\n",
     "    num_lll = 0\n",
     "    part_instances = [instance[:i] for instance in unsolve_instances]\n",
     "    for instance in part_instances:\n",
-    "        iterations, dependency = lll_test(instance, 50)\n",
-    "        if iterations == 50:\n",
+    "        iterations, dependency = lll_test(instance, 100, 20)\n",
+    "        if iterations == 20:\n",
     "            num_lll += 1\n",
     "\n",
-    "    print(f'sat_size: {i}, number of all: {num_all}, number of lll: {num_lll}, percent: {num_lll/num_all}')"
+    "    print(f'sat_size: {i}, number of all: {num_all}, number of lll: {num_lll}, percent: {num_lll/num_all}')\n",
+    "    plot_data.append((i/100, num_lll/num_all))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc6498f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instances_sizes = []\n",
+    "\n",
+    "for path in os.listdir(formulas_path):\n",
+    "    sat_path = formulas_path + path\n",
+    "    sat_instance, num_vars, num_clauses = read_sat(sat_path)\n",
+    "    unsolve_instances.append(sat_instance)\n",
+    "    instances_sizes.append(num_clauses)\n",
+    "\n",
+    "print(len(instances_sizes))\n",
+    "max_size = max(instances_sizes)\n",
+    "print(max_size)\n",
+    "\n",
+    "instance_distribution = [[], []]\n",
+    "for i in range(1, max_size+1):\n",
+    "    instance_distribution[0].append(i/100)\n",
+    "    instance_distribution[1].append(1 - len([x for x in instances_sizes if x < i])/len(instances_sizes))\n",
+    "\n",
+    "print(instance_distribution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a82e697c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.axisartist.axislines import AxesZero\n",
+    "\n",
+    "\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "\n",
+    "ax = fig.add_subplot(axes_class=AxesZero)\n",
+    "\n",
+    "ax.set_xlim(0, 1)\n",
+    "ax.set_ylim(0, 1.1)\n",
+    "\n",
+    "for direction in [\"xzero\", \"yzero\"]:\n",
+    "    # adds arrows at the ends of each axis\n",
+    "    ax.axis[direction].set_axisline_style(\"-|>\")\n",
+    "\n",
+    "    # adds X and Y-axis from the origin\n",
+    "    ax.axis[direction].set_visible(True)\n",
+    "\n",
+    "for direction in [\"left\", \"right\", \"bottom\", \"top\"]:\n",
+    "    # hides borders\n",
+    "    ax.axis[direction].set_visible(False)\n",
+    "\n",
+    "ax.plot(*zip(*plot_data), color='blue')\n",
+    "\n",
+    "# ax.plot(instance_distribution[0], instance_distribution[1], color='red')\n",
+    "\n",
+    "ax.set_xlabel(\"clause density\")\n",
+    "ax.set_ylabel(\"satisfiable rate\")\n",
+    "\n",
+    "fig.show()\n",
+    "fig.savefig('lll-pt.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "264aacdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "lll_data = [x for x in plot_data]\n",
+    "\n",
+    "lll_data.append((14, 0))\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "\n",
+    "ax = fig.add_subplot(axes_class=AxesZero)\n",
+    "\n",
+    "ax.set_xlim(0, 16)\n",
+    "ax.set_ylim(0, 1.1)\n",
+    "\n",
+    "for direction in [\"xzero\", \"yzero\"]:\n",
+    "    # adds arrows at the ends of each axis\n",
+    "    ax.axis[direction].set_axisline_style(\"-|>\")\n",
+    "\n",
+    "    # adds X and Y-axis from the origin\n",
+    "    ax.axis[direction].set_visible(True)\n",
+    "\n",
+    "for direction in [\"left\", \"right\", \"bottom\", \"top\"]:\n",
+    "    # hides borders\n",
+    "    ax.axis[direction].set_visible(False)\n",
+    "\n",
+    "\n",
+    "ax.plot(*zip(*lll_data), color='blue')\n",
+    "\n",
+    "ax.plot(instance_distribution[0], instance_distribution[1], color='red')\n",
+    "\n",
+    "ax.set_xlabel(\"clause density\")\n",
+    "ax.set_ylabel(\"satisfiable rate\")\n",
+    "\n",
+    "fig.show()\n",
+    "fig.savefig('lll-satisfiable-pt.png')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.2 ('base')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -228,11 +343,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "c6e4e9f98eb68ad3b7c296f83d20e6de614cb42e90992a65aa266555a3137d0d"
+    "hash": "7df9adec5398d45472c8bf81047aa2ae699f575f599903d765e95bf4a199fe03"
    }
   }
  },
