--- a/phase_transition.ipynb
+++ b/phase_transition.ipynb
@@ -8,12 +8,12 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "import os\n",
     "\n",
     "import numpy as np\n",
     "from pysat.formula import CNF \n",
     "from pysat.solvers import Solver\n",
-    "from pylll.generator import lll_generator\n",
-    "from pylll.decision import lll_decision\n",
+    "from pylll import lll_decision\n",
     "\n",
     "\n",
     "def read_sat(sat_path):\n",
@@ -33,167 +33,27 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cf6bc12b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the size of SAT: 4000\n",
-      "----------\n",
-      "The SAT instance can be solved: True\n",
-      "solver time: 0.0041\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "n = 10000 # variable number\n",
-    "sat_instance = lll_generator(n, 5)\n",
-    "print(f'the size of SAT: {len(sat_instance)}')\n",
-    "\n",
-    "print('----------')\n",
-    "\n",
-    "cnf = CNF(from_clauses=sat_instance)\n",
-    "start_time = time.time()\n",
-    "with Solver(bootstrap_with=cnf) as solver:\n",
-    "    print(f'The SAT instance can be solved: {solver.solve()}')\n",
-    "    # print(solver.get_model())\n",
-    "print(f\"solver time: {time.time() - start_time:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "5458b327",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sat_size: 1, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 2, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 3, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 4, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 5, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 6, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 7, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 8, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 9, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 10, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 11, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 12, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 13, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 14, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 15, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 16, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 17, number of all: 497, number of lll: 497, percent: 1.0\n",
-      "sat_size: 18, number of all: 497, number of lll: 496, percent: 0.9979879275653923\n",
-      "sat_size: 19, number of all: 497, number of lll: 496, percent: 0.9979879275653923\n",
-      "sat_size: 20, number of all: 497, number of lll: 495, percent: 0.9959758551307847\n",
-      "sat_size: 21, number of all: 497, number of lll: 491, percent: 0.9879275653923542\n",
-      "sat_size: 22, number of all: 497, number of lll: 490, percent: 0.9859154929577465\n",
-      "sat_size: 23, number of all: 497, number of lll: 487, percent: 0.9798792756539235\n",
-      "sat_size: 24, number of all: 497, number of lll: 486, percent: 0.9778672032193159\n",
-      "sat_size: 25, number of all: 497, number of lll: 480, percent: 0.96579476861167\n",
-      "sat_size: 26, number of all: 497, number of lll: 473, percent: 0.9517102615694165\n",
-      "sat_size: 27, number of all: 497, number of lll: 466, percent: 0.937625754527163\n",
-      "sat_size: 28, number of all: 497, number of lll: 457, percent: 0.9195171026156942\n",
-      "sat_size: 29, number of all: 497, number of lll: 442, percent: 0.8893360160965795\n",
-      "sat_size: 30, number of all: 497, number of lll: 428, percent: 0.8611670020120724\n",
-      "sat_size: 31, number of all: 497, number of lll: 414, percent: 0.8329979879275654\n",
-      "sat_size: 32, number of all: 497, number of lll: 400, percent: 0.8048289738430584\n",
-      "sat_size: 33, number of all: 497, number of lll: 380, percent: 0.7645875251509054\n",
-      "sat_size: 34, number of all: 497, number of lll: 360, percent: 0.7243460764587525\n",
-      "sat_size: 35, number of all: 497, number of lll: 335, percent: 0.6740442655935613\n",
-      "sat_size: 36, number of all: 497, number of lll: 318, percent: 0.6398390342052314\n",
-      "sat_size: 37, number of all: 497, number of lll: 280, percent: 0.5633802816901409\n",
-      "sat_size: 38, number of all: 497, number of lll: 259, percent: 0.5211267605633803\n",
-      "sat_size: 39, number of all: 497, number of lll: 228, percent: 0.45875251509054327\n",
-      "sat_size: 40, number of all: 497, number of lll: 196, percent: 0.39436619718309857\n",
-      "sat_size: 41, number of all: 497, number of lll: 163, percent: 0.32796780684104626\n",
-      "sat_size: 42, number of all: 497, number of lll: 131, percent: 0.2635814889336016\n",
-      "sat_size: 43, number of all: 497, number of lll: 103, percent: 0.20724346076458752\n",
-      "sat_size: 44, number of all: 497, number of lll: 79, percent: 0.158953722334004\n",
-      "sat_size: 45, number of all: 497, number of lll: 59, percent: 0.11871227364185111\n",
-      "sat_size: 46, number of all: 497, number of lll: 51, percent: 0.10261569416498995\n",
-      "sat_size: 47, number of all: 497, number of lll: 34, percent: 0.06841046277665996\n",
-      "sat_size: 48, number of all: 497, number of lll: 21, percent: 0.04225352112676056\n",
-      "sat_size: 49, number of all: 497, number of lll: 16, percent: 0.03219315895372234\n",
-      "sat_size: 50, number of all: 497, number of lll: 10, percent: 0.02012072434607646\n",
-      "sat_size: 51, number of all: 497, number of lll: 7, percent: 0.014084507042253521\n",
-      "sat_size: 52, number of all: 497, number of lll: 6, percent: 0.012072434607645875\n",
-      "sat_size: 53, number of all: 497, number of lll: 4, percent: 0.008048289738430584\n",
-      "sat_size: 54, number of all: 497, number of lll: 4, percent: 0.008048289738430584\n",
-      "sat_size: 55, number of all: 497, number of lll: 3, percent: 0.006036217303822937\n",
-      "sat_size: 56, number of all: 497, number of lll: 2, percent: 0.004024144869215292\n",
-      "sat_size: 57, number of all: 497, number of lll: 1, percent: 0.002012072434607646\n",
-      "sat_size: 58, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 59, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 60, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 61, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 62, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 63, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 64, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 65, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 66, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 67, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 68, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 69, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 70, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 71, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 72, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 73, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 74, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 75, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 76, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 77, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 78, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 79, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 80, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 81, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 82, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 83, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 84, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 85, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 86, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 87, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 88, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 89, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 90, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 91, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 92, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 93, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 94, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 95, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 96, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 97, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 98, number of all: 497, number of lll: 0, percent: 0.0\n",
-      "sat_size: 99, number of all: 497, number of lll: 0, percent: 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "unsolve_path = './unsolve_formulas/'\n",
+    "unsat_path = './unsat_formulas/'\n",
     "\n",
-    "unsolve_instances = []\n",
-    "for name in os.listdir(unsolve_path):\n",
-    "    sat_path = unsolve_path + name\n",
+    "unsat_instances = []\n",
+    "for name in os.listdir(unsat_path):\n",
+    "    sat_path = unsat_path + name\n",
     "    sat_instance, num_vars, num_clauses = read_sat(sat_path)\n",
-    "    unsolve_instances.append(sat_instance)\n",
+    "    unsat_instances.append(sat_instance)\n",
     "\n",
     "plot_data = []\n",
-    "num_all = len(unsolve_instances)\n",
+    "num_all = len(unsat_instances)\n",
     "for i in range(1, 100):\n",
     "    num_lll = 0\n",
-    "    part_instances = [instance[:i] for instance in unsolve_instances]\n",
+    "    part_instances = [instance[:i] for instance in unsat_instances]\n",
     "    for instance in part_instances:\n",
-    "        if lll_decision(instance, 100, 20):\n",
+    "        if lll_decision(instance, 100, eval_iter=20):\n",
     "            num_lll += 1\n",
-    "\n",
-    "    print(f'sat_size: {i}, number of all: {num_all}, number of lll: {num_lll}, percent: {num_lll/num_all}')\n",
+    "    # print(f'sat_size: {i}, number of all: {num_all}, number of lll: {num_lll}, percent: {num_lll/num_all}')\n",
     "    plot_data.append((i/100, num_lll/num_all))\n",
     "    "
    ]
@@ -216,10 +76,10 @@
    "source": [
     "instances_sizes = []\n",
     "\n",
-    "for name in os.listdir(unsolve_path):\n",
-    "    sat_path = unsolve_path + name\n",
+    "for name in os.listdir(unsat_path):\n",
+    "    sat_path = unsat_path + name\n",
     "    sat_instance, num_vars, num_clauses = read_sat(sat_path)\n",
-    "    unsolve_instances.append(sat_instance)\n",
+    "    unsat_instances.append(sat_instance)\n",
     "    instances_sizes.append(num_clauses)\n",
     "\n",
     "print(len(instances_sizes))\n",
